增加prompt插件层

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 # 必须配置，或在环境变量中配置也可
-OPENAI_API_KEY: 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  # sk-XXXX更改为你的api key,可从此处获取 https://platform.openai.com/account/api-keys
+OPENAI_API_KEY:   # sk-XXXX更改为你的api key,可从此处获取 https://platform.openai.com/account/api-keys
 PORT: 10003    # 运行端口
 
 # 功能性配置，可适当调整
